fixes bug 344309 "PostMessage WM_QUIT to FirefoxMessageWindow does not quit the app on the trunk since Bug 326273 landed" r=bsmedberg